add_executable(build_times_ranges_headers headers.cpp)
target_compile_features(build_times_ranges_headers PUBLIC cxx_std_23)
target_compile_options(build_times_ranges_headers PRIVATE -ftime-trace)

add_executable(build_times_ranges_modules modules.cpp)
target_compile_features(build_times_ranges_modules PUBLIC cxx_std_23)
target_compile_options(build_times_ranges_modules PRIVATE -ftime-trace)
set_target_properties(build_times_ranges_modules PROPERTIES CXX_MODULE_STD ON)
